assets/_default.scss
* {
	border: 0;
	font: inherit;
	font-size: 100%;
	vertical-align: baseline;
	margin: 0;
	padding: 0;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    box-sizing: border-box;
}

body {
    background-color: $background-color;
	font-family: $body-font, sans-serif;
	font-size: 20px;
	line-height: 160%;
    font-display: swap;
}

.outer {
    width: 100%;
  }

.middle {
    width: 100%;
}
  
.inner {
    margin-left: auto;
    margin-right: auto;
    max-width: 768px;
    padding: 0 16px;
    box-sizing: border-box;
}

@media only screen and (max-width: 600px) {
    .inner {
        max-width: 400px;
    }
}

